# gameEngine

./: CLAUDE.md  CMakeCache.txt  CMakeLists.txt  Makefile  MyFirstCppGame  TODO.md  cmake_install.cmake  cube.gltf  gltf_bin_converter.cpp  gltf_bin_converter_CMakeLists.txt  gltf_config.json  run_game.sh
shaders/src/: fs_moon.sc  fs_npc_instanced.sc  fs_sun.sc  fs_textured_cube.sc  fs_ui_panel.sc  fs_ui_text.sc  varying_moon.def.sc  varying_npc_instanced.def.sc  varying_ui.def.sc  vs_npc_instanced.sc  vs_sun.sc  vs_ui_panel.sc
src/: bin_analyzer.cpp  bin_mesh_test.cpp  camera.cpp  camera.h  main.cpp  model.cpp  model.h  npcs.cpp  npcs.h  ozz_animation.cpp  ozz_animation.h  paul call notes.md  player.cpp  player.h  resources.cpp  resources.h  skills.cpp  skills.h  ui.cpp  ui.h
